[gd_scene load_steps=23 format=2]

[ext_resource path="res://art/npc_art/wpnseller.png" type="Texture" id=1]
[ext_resource path="res://player/main/ui/ammo_shop_ui/ammo_shop_ui.gd" type="Script" id=2]
[ext_resource path="res://player/main/ui/weapon_shop_ui/weapon_shop_ui.gd" type="Script" id=3]
[ext_resource path="res://level/npc/script/weapon_seller.gd" type="Script" id=4]
[ext_resource path="res://art/pico-8-font.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://art/resource_art/kalphite.png" type="Texture" id=6]
[ext_resource path="res://player/main/ui/weapon_shop_ui/weapon_button.tscn" type="PackedScene" id=7]
[ext_resource path="res://art/rainyedited.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://art/picotron.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://art/player_art/ui_art/general_ui_art/rect_fancy_1.png" type="Texture" id=10]
[ext_resource path="res://player/main/ui/magic_shop_ui/magic_shop_ui.gd" type="Script" id=11]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.527273, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 135

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="Gradient" id=7]
colors = PoolColorArray( 1, 1, 1, 0.337255, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )
width = 128

[sub_resource type="DynamicFont" id=5]
size = 5
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
outline_size = 1
outline_color = Color( 1, 1, 1, 0.160784 )
font_data = ExtResource( 8 )

[sub_resource type="Gradient" id=10]

[sub_resource type="GradientTexture2D" id=11]
gradient = SubResource( 10 )
width = 128
height = 32
fill_from = Vector2( 0.5, 0.9 )
fill_to = Vector2( 0.5, 0 )

[sub_resource type="DynamicFont" id=9]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[node name="merchant" type="Node2D"]
pause_mode = 2
z_index = 5
script = ExtResource( 4 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="shop_ui" type="CanvasLayer" parent="."]
layer = 3

[node name="ColorRect" type="Node2D" parent="shop_ui"]

[node name="gradient" type="Sprite" parent="shop_ui/ColorRect"]
visible = false
position = Vector2( 19, 11841 )
scale = Vector2( 1, 20000 )
texture = SubResource( 2 )

[node name="gradient2" type="Sprite" parent="shop_ui/ColorRect"]
visible = false
position = Vector2( 457, 11841 )
scale = Vector2( -1, 20000 )
texture = SubResource( 2 )

[node name="gradient3" type="Sprite" parent="shop_ui/ColorRect"]
visible = false
modulate = Color( 1, 1, 1, 0.784314 )
position = Vector2( 261, 11841 )
scale = Vector2( -0.458628, 20000 )
texture = SubResource( 4 )

[node name="magic_shop_ui" type="Node2D" parent="shop_ui"]
script = ExtResource( 11 )

[node name="menu_go_to_weapon" type="Node2D" parent="shop_ui/magic_shop_ui"]
position = Vector2( 479, -5 )
scale = Vector2( -1, 1 )

[node name="gradient" type="Sprite" parent="shop_ui/magic_shop_ui/menu_go_to_weapon"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 31, 799 )
scale = Vector2( 1, 1388 )
texture = SubResource( 8 )

[node name="weapon_shop_ui" type="Node2D" parent="shop_ui"]
script = ExtResource( 3 )

[node name="kalphite" type="Node2D" parent="shop_ui/weapon_shop_ui"]
position = Vector2( 427, 32 )

[node name="Label" type="Label" parent="shop_ui/weapon_shop_ui/kalphite"]
margin_left = 16.0
margin_top = 10.0
margin_right = 56.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 5 )
text = "100"

[node name="kalsprite" type="Sprite" parent="shop_ui/weapon_shop_ui/kalphite"]
position = Vector2( 10, 13 )
texture = ExtResource( 6 )
hframes = 3
frame = 2

[node name="weapon_button" parent="shop_ui/weapon_shop_ui" instance=ExtResource( 7 )]
position = Vector2( -155, -218 )

[node name="purchase_text" type="Label" parent="shop_ui/weapon_shop_ui"]
margin_left = 45.0
margin_top = 18.0
margin_right = 459.0
margin_bottom = 33.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 6 )
text = "Purchased a AK-47!"
align = 2

[node name="menu_go_to_magic" type="Node2D" parent="shop_ui/weapon_shop_ui"]

[node name="gradient" type="Sprite" parent="shop_ui/weapon_shop_ui/menu_go_to_magic"]
modulate = Color( 0, 1, 1, 1 )
position = Vector2( 31, 799 )
scale = Vector2( 1, 1388 )
texture = SubResource( 8 )

[node name="menu_go_to_ammo" type="Node2D" parent="shop_ui/weapon_shop_ui"]
position = Vector2( 479, -5 )
scale = Vector2( -1, 1 )

[node name="gradient" type="Sprite" parent="shop_ui/weapon_shop_ui/menu_go_to_ammo"]
modulate = Color( 1, 1, 0, 1 )
position = Vector2( 31, 799 )
scale = Vector2( 1, 1388 )
texture = SubResource( 8 )

[node name="ammo_shop_ui" type="Node2D" parent="shop_ui"]
script = ExtResource( 2 )

[node name="menu_goto_weapon" type="Node2D" parent="shop_ui/ammo_shop_ui"]

[node name="gradient" type="Sprite" parent="shop_ui/ammo_shop_ui/menu_goto_weapon"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 31, 799 )
scale = Vector2( 1, 1388 )
texture = SubResource( 8 )

[node name="button_ammo_bullet" type="Area2D" parent="shop_ui/ammo_shop_ui"]
position = Vector2( 393, 84 )

[node name="rect" type="NinePatchRect" parent="shop_ui/ammo_shop_ui/button_ammo_bullet"]
margin_left = -65.0
margin_top = -18.0
margin_right = 63.0
margin_bottom = 18.0
rect_clip_content = true
texture = ExtResource( 10 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 3
patch_margin_bottom = 3

[node name="gradient" type="Sprite" parent="shop_ui/ammo_shop_ui/button_ammo_bullet/rect"]
modulate = Color( 1, 1, 1, 0.498039 )
show_behind_parent = true
light_mask = 0
position = Vector2( 65, 18 )
texture = SubResource( 11 )

[node name="button_ammo_heavy" type="Area2D" parent="shop_ui/ammo_shop_ui"]
position = Vector2( 393, 84 )

[node name="rect" type="NinePatchRect" parent="shop_ui/ammo_shop_ui/button_ammo_heavy"]
margin_left = -65.0
margin_top = -18.0
margin_right = 63.0
margin_bottom = 18.0
rect_clip_content = true
texture = ExtResource( 10 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 3
patch_margin_bottom = 3

[node name="gradient" type="Sprite" parent="shop_ui/ammo_shop_ui/button_ammo_heavy/rect"]
modulate = Color( 1, 1, 1, 0.498039 )
show_behind_parent = true
light_mask = 0
position = Vector2( 65, 18 )
texture = SubResource( 11 )

[node name="button_ammo_shell" type="Area2D" parent="shop_ui/ammo_shop_ui"]
position = Vector2( 393, 84 )

[node name="rect" type="NinePatchRect" parent="shop_ui/ammo_shop_ui/button_ammo_shell"]
margin_left = -65.0
margin_top = -18.0
margin_right = 63.0
margin_bottom = 18.0
rect_clip_content = true
texture = ExtResource( 10 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 3
patch_margin_bottom = 3

[node name="gradient" type="Sprite" parent="shop_ui/ammo_shop_ui/button_ammo_shell/rect"]
modulate = Color( 1, 1, 1, 0.498039 )
show_behind_parent = true
light_mask = 0
position = Vector2( 65, 18 )
texture = SubResource( 11 )

[node name="button_ammo_explosive" type="Area2D" parent="shop_ui/ammo_shop_ui"]
position = Vector2( 393, 84 )

[node name="rect" type="NinePatchRect" parent="shop_ui/ammo_shop_ui/button_ammo_explosive"]
margin_left = -65.0
margin_top = -18.0
margin_right = 63.0
margin_bottom = 18.0
rect_clip_content = true
texture = ExtResource( 10 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 3
patch_margin_bottom = 3

[node name="gradient" type="Sprite" parent="shop_ui/ammo_shop_ui/button_ammo_explosive/rect"]
modulate = Color( 1, 1, 1, 0.498039 )
show_behind_parent = true
light_mask = 0
position = Vector2( 65, 18 )
texture = SubResource( 11 )

[node name="button_ammo_energy" type="Area2D" parent="shop_ui/ammo_shop_ui"]
position = Vector2( 393, 84 )

[node name="rect" type="NinePatchRect" parent="shop_ui/ammo_shop_ui/button_ammo_energy"]
margin_left = -65.0
margin_top = -18.0
margin_right = 63.0
margin_bottom = 18.0
rect_clip_content = true
texture = ExtResource( 10 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 3
patch_margin_bottom = 3

[node name="gradient" type="Sprite" parent="shop_ui/ammo_shop_ui/button_ammo_energy/rect"]
modulate = Color( 1, 1, 1, 0.498039 )
show_behind_parent = true
light_mask = 0
position = Vector2( 65, 18 )
texture = SubResource( 11 )

[node name="selection_ui" type="Node2D" parent="shop_ui"]
position = Vector2( 240, -6 )

[node name="magic_shop_selection" type="Node2D" parent="shop_ui/selection_ui"]
position = Vector2( -100, 21 )

[node name="magic_shop_selection" type="Label" parent="shop_ui/selection_ui/magic_shop_selection"]
modulate = Color( 0, 1, 1, 1 )
margin_left = -75.0
margin_right = 75.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 9 )
text = "Magic"
align = 1

[node name="weapon_shop_select" type="Node2D" parent="shop_ui/selection_ui"]
position = Vector2( 0, 21 )

[node name="weapon_shop_select" type="Label" parent="shop_ui/selection_ui/weapon_shop_select"]
modulate = Color( 1, 0.262745, 0, 1 )
margin_left = -75.0
margin_right = 75.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 9 )
text = "Weapons"
align = 1

[node name="ammo_shop_select" type="Node2D" parent="shop_ui/selection_ui"]
position = Vector2( 100, 21 )

[node name="ammo_shop_select" type="Label" parent="shop_ui/selection_ui/ammo_shop_select"]
modulate = Color( 1, 1, 0.439216, 1 )
margin_left = -75.0
margin_right = 75.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 9 )
text = "Ammo"
align = 1
